fix spacing issue

--- a/client/src/Weather/CurrentWeather.module.css
+++ b/client/src/Weather/CurrentWeather.module.css
@@ -1,5 +1,6 @@
 .container {
   min-height: 15rem;
+  margin-top: 2rem;
 }
 
 .cardMain {
