--- a/client/src/components/Loading.module.css
+++ b/client/src/components/Loading.module.css
@@ -4,4 +4,5 @@
   align-items: center;
   height: 100%;
   padding: 6px;
+  min-height: 15rem;
 }
